--- a/Pra01_lottoNumber/app/src/main/AndroidManifest.xml
+++ b/Pra01_lottoNumber/app/src/main/AndroidManifest.xml
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pra01_lottoNumber">
+        android:theme="@style/AppTheme">
+        <activity android:name=".ResultActivity"
+            android:theme="@style/AppTheme.Result"></activity>
+        <activity android:name=".NameActivity"
+            android:theme="@style/AppTheme.Name"/>
+        <activity android:name=".ConstellationActivity"
+            android:theme="@style/AppTheme.Constellation"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
