--- a/Pra02_QuizLocker/app/src/main/AndroidManifest.xml
+++ b/Pra02_QuizLocker/app/src/main/AndroidManifest.xml
@@ -13,17 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pra02_QuizLocker">
-        <activity android:name=".PrefExActivity">
+        <activity android:name=".PrefFragmentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FileExActivity">
+        <activity android:name=".PrefExActivity">
 
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".FileExActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
