--- a/Pra02_QuizLocker/app/src/main/AndroidManifest.xml
+++ b/Pra02_QuizLocker/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pra02_QuizLocker">
+        <service
+            android:name=".LockScreenService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity android:name=".ScreenOffExActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PrefFragmentActivity">
-        </activity>
+        <activity android:name=".PrefFragmentActivity"></activity>
         <activity android:name=".PrefExActivity" />
         <activity android:name=".FileExActivity" />
         <activity android:name=".MainActivity" />
