--- a/Pra02_QuizLocker/app/src/main/AndroidManifest.xml
+++ b/Pra02_QuizLocker/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!-- foregroundService를 실행하기 위한 권한 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"   />
+    <!-- 진동 서비스 권한 -->
+    <uses-permission android:name="android.permission.VIBRATE"  />
 
     <application
         android:allowBackup="true"
