--- a/Pra04_SeoulToilet/app/src/main/AndroidManifest.xml
+++ b/Pra04_SeoulToilet/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pra04_seoultoilet">
 
+    <!-- 현재 위치 권한 요청 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"   />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pra04_SeoulToilet">
+        <!-- googleMaps API key -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBIKMwqEVfaaj7AFtz1yfqyTCZBvvr9tNE" />
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"   />
+        <uses-library android:name="org.apache.http.legacy"
+            android:required="false"    />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
