--- a/Pra04_SeoulToilet/app/src/main/AndroidManifest.xml
+++ b/Pra04_SeoulToilet/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <!-- 현재 위치 권한 요청 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"   />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 인터넷 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pra04_SeoulToilet">
+        android:theme="@style/Theme.Pra04_SeoulToilet"
+        android:usesCleartextTraffic="true">
         <!-- googleMaps API key -->
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBIKMwqEVfaaj7AFtz1yfqyTCZBvvr9tNE" />
