--- a/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
+++ b/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".ModifyActivity"></activity>
+        <activity android:name=".DetailActivity" />
         <activity android:name=".WriteActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
