--- a/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
+++ b/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ModifyActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".ModifyActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".WriteActivity" />
         <activity android:name=".MainActivity">
