--- a/Pra05_AnonymousSNS/app/build.gradle
+++ b/Pra05_AnonymousSNS/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pra05_anonymoussns"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-core:18.0.1'
+    // FirebaseUi
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
