--- a/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
+++ b/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
@@ -10,20 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".ModifyActivity" />
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".WriteActivity" />
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        >
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ModifyActivity" />
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".WriteActivity" />
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
