--- a/Pra05_AnonymousSNS/app/build.gradle
+++ b/Pra05_AnonymousSNS/app/build.gradle
@@ -55,7 +55,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:18.0.1'
     // FirebaseUi
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:20.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
