--- a/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
+++ b/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
+        <activity android:name=".PhoneAuthActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +22,7 @@
         <activity android:name=".ModifyActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".WriteActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
