[ADD] Login - Google

--- a/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
+++ b/Pra05_AnonymousSNS/app/src/main/AndroidManifest.xml
@@ -11,18 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PhoneAuthActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PhoneAuthActivity" />
+        <activity android:name=".LoginActivity">
+        </activity>
         <activity android:name=".ModifyActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".WriteActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
