--- a/Pra05_AnonymousSNS/app/build.gradle
+++ b/Pra05_AnonymousSNS/app/build.gradle
@@ -53,10 +53,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-core:18.0.1'
-    // FirebaseUi
+    // Firebase 인증
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-auth-ktx:20.0.2'
+    // Google Play services
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
