--- a/Pra05_AnonymousSNS/app/build.gradle
+++ b/Pra05_AnonymousSNS/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:20.0.2'
     // Google Play services
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    // Firebase - Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
