--- a/Pra07_Calendar01/app/build.gradle
+++ b/Pra07_Calendar01/app/build.gradle
@@ -40,11 +40,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // CalendarView 라이브러리
-    implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 }
