--- a/Pra07_Calendar01/app/build.gradle
+++ b/Pra07_Calendar01/app/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     // CalendarView 라이브러리
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
     implementation 'jp.co.recruit_mp:LightCalendarView:1.0.1'
-    implementation 'com.github.marcohc:robotocalendarview:Tag'
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
 }
