--- a/Pra07_Calendar01/app/build.gradle
+++ b/Pra07_Calendar01/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
     implementation 'jp.co.recruit_mp:LightCalendarView:1.0.1'
     implementation 'com.applandeo:material-calendar-view:1.7.0'
+
+    testImplementation 'org.mockito:mockito-core:2.15.0'
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 }
