--- a/Pra10_DataBinding/app/build.gradle
+++ b/Pra10_DataBinding/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     kapt 'com.android.databinding:compiler:3.5.3'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
