--- a/Pra10_DataBinding/app/build.gradle
+++ b/Pra10_DataBinding/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     kapt 'com.android.databinding:compiler:3.5.3'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 }
